--- a/apache/tiddlywiki.conf
+++ b/apache/tiddlywiki.conf
@@ -1,27 +1,131 @@
+# MIT License
+# Copyright (c) 2018 Nicola Worthington <nicolaw@tfb.net>
+
+# https://weakdh.org/sysadmin.html
+# https://www.ssllabs.com/ssltest/analyze.html?d=${DOMAIN}
+# http://serverfault.com/questions/693241/how-to-fix-logjam-vulnerability-in-apache-httpd
+# https://o-o-s.de/debian-wheezy-apache-logjam/10492
+# https://httpd.apache.org/docs/current/ssl/ssl_faq.html
+
+Listen 443
+Listen 444
+
+<Macro Common>
+    ServerAdmin ${EMAIL}
+    ServerName ${DOMAIN}
+    ServerAlias www.${DOMAIN}
+
+    UseCanonicalName On
+    DocumentRoot "/usr/local/apache2/htdocs"
+
+    Options -Indexes +FollowSymLinks -MultiViews
+    CheckSpelling On
+
+    SSLEngine on
+    SSLCertificateFile /etc/letsencrypt/live/${DOMAIN}/cert.pem
+    SSLCertificateKeyFile /etc/letsencrypt/live/${DOMAIN}/privkey.pem
+    SSLCertificateChainFile /etc/letsencrypt/live/${DOMAIN}/fullchain.pem
+    # SSLOpenSSLConfCmd DHParameters "/etc/ssl/dhparams.pem"
+
+    SSLCipherSuite AES128+EECDH:AES128+EDH
+    SSLProtocol All -SSLv2 -SSLv3
+    SSLHonorCipherOrder On
+    # SSLCompression off
+    # SSLUseStapling on
+    # SSLStaplingCache "shmcb:logs/stapling-cache(150000)"
+
+    Header set Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" env=HTTPS
+    Header always set X-Frame-Options SAMEORIGIN
+    Header always set X-Content-Type-Options nosniff
+
+    BrowserMatch "MSIE [2-6]" \
+    nokeepalive ssl-unclean-shutdown \
+    downgrade-1.0 force-response-1.0
+    BrowserMatch "MSIE [17-9]" ssl-unclean-shutdown
+
+    Header merge Cache-Control no-cache
+
+    <Proxy *>
+      Require all granted
+    </Proxy>
+
+    RewriteEngine On
+    # RewriteCond %{HTTP_USER_AGENT}  ^Lynx/.*         [OR]
+    # RewriteCond %{HTTP_USER_AGENT}  ^ELinks/.*       [OR]
+    # RewriteCond %{HTTP_USER_AGENT}  ^Links.*         [OR]
+    # RewriteCond %{HTTP_USER_AGENT}  ^w3m/.*          [OR]
+    # RewriteCond %{HTTP_USER_AGENT}  ^curl/.*         [OR]
+    # RewriteCond %{HTTP_USER_AGENT}  ^Wget/.*         [OR]
+    # RewriteCond %{HTTP_USER_AGENT}  ^lwp-request/.*
+    # RewriteCond %{REQUEST_URI}      ^/(status$|bags/.*|recipes/.*)?$
+    # RewriteRule .*                  /hello [R,L]
+    #	RewriteCond /static%{LA-F:REQUEST_URI}.html -F
+
+    RewriteCond %{REQUEST_FILENAME} !-F
+    RewriteCond %{REQUEST_URI} ^/[^/]+.html$
+    RewriteCond %{REQUEST_URI} !^/(status$|bags/|recipes/|static[/\.]|s/|\.well-known/|favicon\.ico$)
+    RewriteRule ^/(.+)$ /static/$1
+
+    RewriteCond %{REQUEST_FILENAME} !-F
+    RewriteCond %{REQUEST_URI} !^/[^/]+\.html$
+    RewriteCond %{REQUEST_URI} !^/(status$|bags/|recipes/|static[/\.]|s/|\.well-known/|favicon\.ico$)
+    RewriteRule ^/(.+)$ /static/$1.html
+
+    RewriteCond %{REQUEST_FILENAME} !-F
+    RewriteCond %{REQUEST_URI} !^/static/static\.css$
+    RewriteRule /static.css /static/static.css
+
+    ProxyPreserveHost Off
+    ProxyPass /.well-known !
+    ProxyPass /static !
+    ProxyPass /static.css !
+    ProxyPass /favicon.ico !
+    ProxyPass /s !
+    ProxyPass /sitemap.xml !
+    ProxyPass /ror.xml !
+    ProxyPass / http://tiddlywiki:8080/
+    AllowEncodedSlashes on
+
+    # ErrorDocument 400 /400_Bad_Request.html
+    ErrorDocument 401 /401_Unauthorized.html
+    ErrorDocument 403 /403_Forbidden.html
+    ErrorDocument 404 /404_Not_Found.html
+
+    # ErrorDocument 500 /500_Internal_Server_Error.html
+    # ErrorDocument 502 /502_Bad_Gateway.html
+    ErrorDocument 503 /503_Service_Unavailable.html
+    # ErrorDocument 504 /504_Gateway_Timeout.html
+
+    # ErrorLog ${APACHE_LOG_DIR}/error.log
+    # CustomLog ${APACHE_LOG_DIR}/access.log combined
+</Macro>
+
 <VirtualHost _default_:80>
-  #ServerName mydomain.com
-  #ServerAlias www.mydomain.com
   RewriteEngine On
+  RewriteCond %{REQUEST_URI} !^/\.well-known/.*$
   RewriteRule ^/?(.*) https://%{HTTP_HOST}/$1 [L,R=301,NE]
 </VirtualHost>
 
 <IfModule mod_ssl.c>
+  SSLUseStapling on
+  SSLStaplingCache "shmcb:logs/stapling-cache(150000)"
+
   <VirtualHost _default_:444>
-    Include conf/tiddlywiki.include
+    Use Common
 
     <Location />
       AuthType basic
       AuthName "Private"
       AuthBasicProvider file
-      AuthUserFile tiddlywiki.passwd
+      AuthUserFile conf/tiddlywiki.passwd
       Require valid-user
     </Location>
 
-    RewriteRule ^/static/?$ https://%{SERVER_NAME}:444/static/Hello.html [L,R=301,NE]
+    RewriteRule ^/static/?$ https://%{HTTP_HOST}:444/static/Hello.html [L,R=301,NE]
   </VirtualHost>
 
   <VirtualHost _default_:443>
-    Include conf/tiddlywiki.include
+    Use Common
 
     <Location />
       Require all granted
@@ -29,8 +133,7 @@
 
     RewriteCond %{REQUEST_METHOD} !^(GET|HEAD)
     RewriteRule .* - [R=405,L]
-    #RewriteRule .* - [R=204,L]
 
-    RewriteRule ^/static/?$ https://%{SERVER_NAME}/static/Hello.html [L,R=301,NE]
+    RewriteRule ^/static/?$ https://%{HTTP_HOST}/static/Hello.html [L,R=301,NE]
   </VirtualHost>
 </IfModule>
