--- a/tiddlywiki/Dockerfile
+++ b/tiddlywiki/Dockerfile
@@ -1,7 +1,12 @@
+# MIT License
+# Copyright (c) 2018 Nicola Worthington <nicolaw@tfb.net>
+
 FROM node:9.5.0-alpine
 RUN npm install -g tiddlywiki
 VOLUME /var/lib/tiddlywiki
 WORKDIR /var/lib/tiddlywiki
-ADD init-and-run-wiki /usr/local/bin/init-and-run-wiki
 EXPOSE 8080
-CMD ["/usr/local/bin/init-and-run-wiki"]
+ADD syncer.patch /usr/local/src/syncer.patch
+ADD init-and-run /usr/local/bin/init-and-run
+RUN chmod a+x /usr/local/bin/*
+CMD /usr/local/bin/init-and-run
