--- a/apache/httpd.conf
+++ b/apache/httpd.conf
@@ -91,11 +91,11 @@ LoadModule auth_basic_module modules/mod_auth_basic.so
 #LoadModule cache_module modules/mod_cache.so
 #LoadModule cache_disk_module modules/mod_cache_disk.so
 #LoadModule cache_socache_module modules/mod_cache_socache.so
-#LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
+LoadModule socache_shmcb_module modules/mod_socache_shmcb.so
 #LoadModule socache_dbm_module modules/mod_socache_dbm.so
 #LoadModule socache_memcache_module modules/mod_socache_memcache.so
 #LoadModule watchdog_module modules/mod_watchdog.so
-#LoadModule macro_module modules/mod_macro.so
+LoadModule macro_module modules/mod_macro.so
 #LoadModule dbd_module modules/mod_dbd.so
 #LoadModule bucketeer_module modules/mod_bucketeer.so
 #LoadModule dumpio_module modules/mod_dumpio.so
@@ -317,7 +317,7 @@ ErrorLog /proc/self/fd/2
 # Possible values include: debug, info, notice, warn, error, crit,
 # alert, emerg.
 #
-LogLevel warn
+LogLevel error
 
 <IfModule log_config_module>
     #
