--- a/automation/Dockerfile
+++ b/automation/Dockerfile
@@ -1,7 +1,8 @@
 # MIT License
 # Copyright (c) 2018 Nicola Worthington <nicolaw@tfb.net>
 
-FROM alpine:latest
+FROM node:9.5.0-alpine
+RUN npm install -g tiddlywiki
 RUN apk update && apk add git
 ADD init-and-run /usr/local/bin/init-and-run
 ADD git-sync.sh /usr/local/bin/git-sync.sh
