WIP adding git sync

--- a/apache/tiddlywiki.conf
+++ b/apache/tiddlywiki.conf
@@ -39,8 +39,8 @@ Listen 444
     Header always set X-Content-Type-Options nosniff
 
     BrowserMatch "MSIE [2-6]" \
-    nokeepalive ssl-unclean-shutdown \
-    downgrade-1.0 force-response-1.0
+      nokeepalive ssl-unclean-shutdown \
+      downgrade-1.0 force-response-1.0
     BrowserMatch "MSIE [17-9]" ssl-unclean-shutdown
 
     Header merge Cache-Control no-cache
@@ -50,25 +50,28 @@ Listen 444
     </Proxy>
 
     RewriteEngine On
-    # RewriteCond %{HTTP_USER_AGENT}  ^Lynx/.*         [OR]
-    # RewriteCond %{HTTP_USER_AGENT}  ^ELinks/.*       [OR]
-    # RewriteCond %{HTTP_USER_AGENT}  ^Links.*         [OR]
-    # RewriteCond %{HTTP_USER_AGENT}  ^w3m/.*          [OR]
-    # RewriteCond %{HTTP_USER_AGENT}  ^curl/.*         [OR]
-    # RewriteCond %{HTTP_USER_AGENT}  ^Wget/.*         [OR]
-    # RewriteCond %{HTTP_USER_AGENT}  ^lwp-request/.*
-    # RewriteCond %{REQUEST_URI}      ^/(status$|bags/.*|recipes/.*)?$
-    # RewriteRule .*                  /hello [R,L]
-    #	RewriteCond /static%{LA-F:REQUEST_URI}.html -F
+    RewriteCond %{HTTP_USER_AGENT}  ^Lynx/.*         [OR]
+    RewriteCond %{HTTP_USER_AGENT}  ^ELinks/.*       [OR]
+    RewriteCond %{HTTP_USER_AGENT}  ^Links.*         [OR]
+    RewriteCond %{HTTP_USER_AGENT}  ^w3m/.*          [OR]
+    RewriteCond %{HTTP_USER_AGENT}  ^curl/.*         [OR]
+    RewriteCond %{HTTP_USER_AGENT}  ^Wget/.*         [OR]
+    RewriteCond %{HTTP_USER_AGENT}  ^lwp-request/.*
+    RewriteCond %{REQUEST_URI}      ^/(status$|bags/.*|recipes/.*)?$
+    RewriteRule .*                  /static/ [R,L]
+
+    #RewriteCond /static%{LA-F:REQUEST_URI}.html -F
+
+    RewriteRule ^/static$ /static/ [R,L]
 
     RewriteCond %{REQUEST_FILENAME} !-F
     RewriteCond %{REQUEST_URI} ^/[^/]+.html$
-    RewriteCond %{REQUEST_URI} !^/(status$|bags/|recipes/|static[/\.]|s/|\.well-known/|favicon\.ico$)
+    RewriteCond %{REQUEST_URI} !^/(status$|bags/|recipes/|static[/\.]|\.well-known/|favicon\.ico$)
     RewriteRule ^/(.+)$ /static/$1
 
     RewriteCond %{REQUEST_FILENAME} !-F
     RewriteCond %{REQUEST_URI} !^/[^/]+\.html$
-    RewriteCond %{REQUEST_URI} !^/(status$|bags/|recipes/|static[/\.]|s/|\.well-known/|favicon\.ico$)
+    RewriteCond %{REQUEST_URI} !^/(status$|bags/|recipes/|static[/\.]|\.well-known/|favicon\.ico$)
     RewriteRule ^/(.+)$ /static/$1.html
 
     RewriteCond %{REQUEST_FILENAME} !-F
@@ -78,26 +81,18 @@ Listen 444
     ProxyPreserveHost Off
     ProxyPass /.well-known !
     ProxyPass /static !
-    ProxyPass /static.css !
-    ProxyPass /favicon.ico !
-    ProxyPass /s !
-    ProxyPass /sitemap.xml !
-    ProxyPass /ror.xml !
     ProxyPass / http://tiddlywiki:8080/
     AllowEncodedSlashes on
 
-    # ErrorDocument 400 /400_Bad_Request.html
+    ErrorDocument 400 /400_Bad_Request.html
     ErrorDocument 401 /401_Unauthorized.html
     ErrorDocument 403 /403_Forbidden.html
     ErrorDocument 404 /404_Not_Found.html
 
-    # ErrorDocument 500 /500_Internal_Server_Error.html
-    # ErrorDocument 502 /502_Bad_Gateway.html
+    ErrorDocument 500 /500_Internal_Server_Error.html
+    ErrorDocument 502 /502_Bad_Gateway.html
     ErrorDocument 503 /503_Service_Unavailable.html
-    # ErrorDocument 504 /504_Gateway_Timeout.html
-
-    # ErrorLog ${APACHE_LOG_DIR}/error.log
-    # CustomLog ${APACHE_LOG_DIR}/access.log combined
+    ErrorDocument 504 /504_Gateway_Timeout.html
 </Macro>
 
 <VirtualHost _default_:80>
