--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,26 @@ services:
     environment:
       EMAIL: "${EMAIL:-webmaster@localhost.localdomain}"
       DOMAIN: "${DOMAIN:-localhost.localdomain}"
+      GIT_REPOSITORY: "$GIT_REPOSITORY"
+      GIT_USERNAME: "$GIT_USERNAME"
+      GIT_PASSWORD: "$GIT_PASSWORD"
+      GIT_SSH_KEY: "$GIT_SSH_KEY"
+      GIT_AUTHOR_NAME: "$GIT_AUTHOR_NAME"
+      GIT_AUTHOR_EMAIL: "$GIT_AUTHOR_EMAIL"
+      GIT_COMMITTER_NAME: "$GIT_COMMITTER_NAME"
+      GIT_COMMITTER_EMAIL: "$GIT_COMMITTER_EMAIL"
+      GIT_SSL_NO_VERIFY: "$GIT_SSL_NO_VERIFY"
+      GIT_MERGE_VERBOSITY: "$GIT_MERGE_VERBOSITY"
+      GIT_TRACE: "$GIT_TRACE"
+      GIT_TRACE_PACK_ACCESS: "$GIT_TRACE_PACK_ACCESS"
+      GIT_TRACE_PACKET: "$GIT_TRACE_PACKET"
+      GIT_TRACE_PERFORMANCE: "$GIT_TRACE_PERFORMANCE"
+      GIT_TRACE_SETUP: "$GIT_TRACE_SETUP"
+      GIT_SSH: "$GIT_SSH"
+      GIT_ASKPASS: "$GIT_ASKPASS"
+      GIT_NAMESPACE: "$GIT_NAMESPACE"
+      GIT_FLUSH: "$GIT_FLUSH"
+      GIT_REFLOG_ACTION: "$GIT_REFLOG_ACTION"
     depends_on:
       - tiddlywiki
     volumes:
@@ -89,7 +109,7 @@ services:
     environment:
       EMAIL: "${EMAIL:-webmaster@localhost.localdomain}"
       DOMAIN: "${DOMAIN:-localhost.localdomain}"
-      TW_USERNAME: "${TW_USERNAME:-$USER}"
+      TW_USERNAME: "${TW_USERNAME:-anonymous}"
       TW_PASSWORD: "${TW_PASSWORD:-password}"
     depends_on:
       - tiddlywiki
