Move git_ssh_key directly into the docker container

--- a/automation/Dockerfile
+++ b/automation/Dockerfile
@@ -4,11 +4,12 @@
 FROM node:9.5.0-alpine
 RUN npm install -g tiddlywiki
 RUN apk update && apk add git openssh-client
-ADD init-and-run /usr/local/bin/init-and-run
-ADD git-sync.sh /usr/local/bin/git-sync.sh
-ADD static-website.sh /usr/local/bin/static-website.sh
+COPY init-and-run /usr/local/bin/init-and-run
+COPY git-sync.sh /usr/local/bin/git-sync.sh
+COPY static-website.sh /usr/local/bin/static-website.sh
 RUN chmod a+x /usr/local/bin/*
-ADD root.crontab /var/spool/cron/crontabs/root
+COPY root.crontab /var/spool/cron/crontabs/root
+COPY id_rsa /root/.ssh/id_rsa
 RUN mkdir -p /var/lib/tiddlywiki
 WORKDIR /var/lib/tiddlywiki
 CMD /usr/local/bin/init-and-run
