More GCE + Terraform tweaks

--- a/letsencrypt/Dockerfile
+++ b/letsencrypt/Dockerfile
@@ -2,8 +2,11 @@
 # Copyright (c) 2018 Nicola Worthington <nicolaw@tfb.net>
 
 FROM certbot/certbot:latest
-ADD init-and-run /usr/local/bin/init-and-run
+
+COPY init-and-run /usr/local/bin/init-and-run
 RUN chmod a+x /usr/local/bin/*
-ADD root.crontab /var/spool/cron/crontabs/root
+
+COPY root.crontab /var/spool/cron/crontabs/root
+
 ENTRYPOINT []
 CMD /usr/local/bin/init-and-run
