removed suplurflous variable

--- a/apache/tiddlywiki.conf
+++ b/apache/tiddlywiki.conf
@@ -52,15 +52,15 @@ Protocols h2 h2c http/1.1
     </Proxy>
 
     RewriteEngine On
-    RewriteCond %{HTTP_USER_AGENT}  ^Lynx/.*         [OR]
-    RewriteCond %{HTTP_USER_AGENT}  ^ELinks/.*       [OR]
-    RewriteCond %{HTTP_USER_AGENT}  ^Links.*         [OR]
-    RewriteCond %{HTTP_USER_AGENT}  ^w3m/.*          [OR]
-    RewriteCond %{HTTP_USER_AGENT}  ^curl/.*         [OR]
-    RewriteCond %{HTTP_USER_AGENT}  ^Wget/.*         [OR]
-    RewriteCond %{HTTP_USER_AGENT}  ^lwp-request/.*
-    RewriteCond %{REQUEST_URI}      ^/(status$|bags/.*|recipes/.*)?$
-    RewriteRule .*                  /static/ [R,L]
+    #RewriteCond %{HTTP_USER_AGENT}  ^Lynx/.*         [OR]
+    #RewriteCond %{HTTP_USER_AGENT}  ^ELinks/.*       [OR]
+    #RewriteCond %{HTTP_USER_AGENT}  ^Links.*         [OR]
+    #RewriteCond %{HTTP_USER_AGENT}  ^w3m/.*          [OR]
+    #RewriteCond %{HTTP_USER_AGENT}  ^curl/.*         [OR]
+    #RewriteCond %{HTTP_USER_AGENT}  ^Wget/.*         [OR]
+    #RewriteCond %{HTTP_USER_AGENT}  ^lwp-request/.*
+    #RewriteCond %{REQUEST_URI}      ^/(status$|s/.*$|bags/.*|recipes/.*)?$
+    #RewriteRule .*                  /static/ [R,L]
 
     #RewriteCond /static%{LA-F:REQUEST_URI}.html -F
 
@@ -68,12 +68,12 @@ Protocols h2 h2c http/1.1
 
     RewriteCond %{REQUEST_FILENAME} !-F
     RewriteCond %{REQUEST_URI} ^/[^/]+.html$
-    RewriteCond %{REQUEST_URI} !^/(status$|bags/|recipes/|static[/\.]|\.well-known/|favicon\.ico$)
+    RewriteCond %{REQUEST_URI} !^/(status$|bags/|recipes/|s/|static[/\.]|\.well-known/|favicon\.ico$)
     RewriteRule ^/(.+)$ /static/$1
 
     RewriteCond %{REQUEST_FILENAME} !-F
     RewriteCond %{REQUEST_URI} !^/[^/]+\.html$
-    RewriteCond %{REQUEST_URI} !^/(status$|bags/|recipes/|static[/\.]|\.well-known/|favicon\.ico$)
+    RewriteCond %{REQUEST_URI} !^/(status$|bags/|recipes/|s/|static[/\.]|\.well-known/|favicon\.ico$)
     RewriteRule ^/(.+)$ /static/$1.html
 
     RewriteCond %{REQUEST_FILENAME} !-F
@@ -81,8 +81,9 @@ Protocols h2 h2c http/1.1
     RewriteRule /static.css /static/static.css
 
     ProxyPreserveHost Off
-    ProxyPass /.well-known !
-    ProxyPass /static !
+    ProxyPass /.well-known/ !
+    ProxyPass /static/ !
+    ProxyPass /s/ !
     ProxyPass / http://tiddlywiki:8080/
     AllowEncodedSlashes on
 
