Improve rewrite rules, static rendering names and add dns repointing

--- a/apache/tiddlywiki.conf
+++ b/apache/tiddlywiki.conf
@@ -52,50 +52,48 @@ Protocols h2 h2c http/1.1
     </Proxy>
 
     RewriteEngine On
-    #RewriteCond %{HTTP_USER_AGENT}  ^Lynx/.*         [OR]
-    #RewriteCond %{HTTP_USER_AGENT}  ^ELinks/.*       [OR]
-    #RewriteCond %{HTTP_USER_AGENT}  ^Links.*         [OR]
-    #RewriteCond %{HTTP_USER_AGENT}  ^w3m/.*          [OR]
-    #RewriteCond %{HTTP_USER_AGENT}  ^curl/.*         [OR]
-    #RewriteCond %{HTTP_USER_AGENT}  ^Wget/.*         [OR]
-    #RewriteCond %{HTTP_USER_AGENT}  ^lwp-request/.*
-    #RewriteCond %{REQUEST_URI}      ^/(status$|s/.*$|bags/.*|recipes/.*)?$
-    #RewriteRule .*                  /static/ [R,L]
+    LogLevel alert rewrite:trace8
 
-    #RewriteCond /static%{LA-F:REQUEST_URI}.html -F
+    RewriteRule ^/(status$|favicon\.ico$|bags/|recipes/|s/|static/|\.well-known/) - [S]
 
     RewriteRule ^/static$ /static/ [R,L]
+    RewriteRule ^/static\.css$ /static/static.css [L]
 
-    RewriteCond %{REQUEST_FILENAME} !-F
-    RewriteCond %{REQUEST_URI} ^/[^/]+.html$
-    RewriteCond %{REQUEST_URI} !^/(status$|bags/|recipes/|s/|static[/\.]|\.well-known/|favicon\.ico$)
-    RewriteRule ^/(.+)$ /static/$1
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{DOCUMENT_ROOT}/static%{REQUEST_URI} -f
+    RewriteRule ^/(.+)$ /static/$1 [L]
 
-    RewriteCond %{REQUEST_FILENAME} !-F
-    RewriteCond %{REQUEST_URI} !^/[^/]+\.html$
-    RewriteCond %{REQUEST_URI} !^/(status$|bags/|recipes/|s/|static[/\.]|\.well-known/|favicon\.ico$)
-    RewriteRule ^/(.+)$ /static/$1.html
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{DOCUMENT_ROOT}/static%{REQUEST_URI}.html -f
+    RewriteRule ^/(.+)$ /static/$1.html [L]
 
-    RewriteCond %{REQUEST_FILENAME} !-F
-    RewriteCond %{REQUEST_URI} !^/static/static\.css$
-    RewriteRule /static.css /static/static.css
+    RewriteMap tolower int:tolower
+
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{DOCUMENT_ROOT}/static${tolower:%{REQUEST_URI}} -f
+    RewriteRule ^/(.+)$ /static/${tolower:$1} [L]
+
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{DOCUMENT_ROOT}/static${tolower:%{REQUEST_URI}}.html -f
+    RewriteRule ^/(.+)$ /static/${tolower:$1}.html [L]
 
     ProxyPreserveHost Off
+    ProxyErrorOverride On
     ProxyPass /.well-known/ !
     ProxyPass /static/ !
     ProxyPass /s/ !
     ProxyPass / http://tiddlywiki:8080/
     AllowEncodedSlashes on
 
-    ErrorDocument 400 /400_Bad_Request.html
-    ErrorDocument 401 /401_Unauthorized.html
-    ErrorDocument 403 /403_Forbidden.html
-    ErrorDocument 404 /404_Not_Found.html
+    ErrorDocument 400 /static/400badrequest.html
+    ErrorDocument 401 /static/401unauthorized.html
+    ErrorDocument 403 /static/403forbidden.html
+    ErrorDocument 404 /static/404notfound.html
 
-    ErrorDocument 500 /500_Internal_Server_Error.html
-    ErrorDocument 502 /502_Bad_Gateway.html
-    ErrorDocument 503 /503_Service_Unavailable.html
-    ErrorDocument 504 /504_Gateway_Timeout.html
+    ErrorDocument 500 /static/500internalservererror.html
+    ErrorDocument 502 /static/502badgateway.html
+    ErrorDocument 503 /static/503serviceunavailable.html
+    ErrorDocument 504 /static/504gatewaytimeout.html
 </Macro>
 
 <VirtualHost _default_:80>
