Send Apache SIGUSR1 signal when SSL certificate change is detected

--- a/apache/tiddlywiki.conf
+++ b/apache/tiddlywiki.conf
@@ -52,7 +52,7 @@ Protocols h2 h2c http/1.1
     </Proxy>
 
     RewriteEngine On
-    LogLevel alert rewrite:trace8
+    # LogLevel alert rewrite:trace8
 
     RewriteRule ^/(status$|favicon\.ico$|bags/|recipes/|s/|static/|\.well-known/) - [S]
 
