Multiple workspaces, optional dns, more robust static tiddler gen

--- a/apache/tiddlywiki.conf
+++ b/apache/tiddlywiki.conf
@@ -82,6 +82,8 @@ Protocols h2 h2c http/1.1
     ProxyPass /.well-known/ !
     ProxyPass /static/ !
     ProxyPass /s/ !
+    ProxyPass /sitemap.xml !
+    ProxyPass /ror.xml !
     ProxyPass / http://tiddlywiki:8080/
     AllowEncodedSlashes on
 
