--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -24,16 +24,15 @@ services:
       GIT_PASSWORD: "$GIT_PASSWORD"
     volumes:
       - source: tiddlywiki
-        target: /var/lib/tiddlywiki
+        target: /var/lib/tiddlywiki/mywiki
         type: volume
       - source: htdocs
         target: /var/lib/tiddlywiki/htdocs
         type: volume
       - source: "${LETSENCRYPT_DATA:-/etc/letsencrypt}"
-        target: /etc/letsencrypt
+        target: /var/lib/tiddlywiki/letsencrypt
         # BUG: https://github.com/moby/moby/issues/3465
         type: bind
-        read_only: true
 
   letsencrypt:
     build:
@@ -41,6 +40,8 @@ services:
     environment:
       EMAIL: "${EMAIL:-webmaster@localhost.localdomain}"
       DOMAIN: "${DOMAIN:-localhost.localdomain}"
+    depends_on:
+      - automation
     volumes:
       - source: htdocs
         target: /usr/local/apache2/htdocs
@@ -68,7 +69,7 @@ services:
       - automation
     volumes:
       - source: tiddlywiki
-        target: /var/lib/tiddlywiki
+        target: /var/lib/tiddlywiki/mywiki
         type: volume
     healthcheck:
       # TODO: Improve this to retrieve a known core system tiddler perhaps?
