Allow static content to still be served on RW port 444

--- a/apache/tiddlywiki.conf
+++ b/apache/tiddlywiki.conf
@@ -117,6 +117,18 @@ Protocols h2 h2c http/1.1
       AuthUserFile conf/tiddlywiki.passwd
       Require valid-user
     </Location>
+    <Location /favicon.ico>
+      Require all granted
+    </Location>
+    <Location /static.css>
+      Require all granted
+    </Location>
+    <Location /static/>
+      Require all granted
+    </Location>
+    <Location /s/>
+      Require all granted
+    </Location>
   </VirtualHost>
 
   <VirtualHost _default_:443>
