Allow private wikis through use of TW_PRIVATE

--- a/apache/tiddlywiki.conf
+++ b/apache/tiddlywiki.conf
@@ -86,7 +86,24 @@ Protocols h2 h2c http/1.1
     ProxyPass /ror.xml !
     ProxyPass / http://tiddlywiki:8080/
     AllowEncodedSlashes on
+</Macro>
 
+<Macro PublicDocuments>
+    <Location /static/favicon.ico>
+      Require all granted
+    </Location>
+    <Location /static/static.css>
+      Require all granted
+    </Location>
+    <Location /favicon.ico>
+      Require all granted
+    </Location>
+    <Location /static.css>
+      Require all granted
+    </Location>
+</Macro>
+
+<Macro ErrorDocuments>
     ErrorDocument 400 /static/400badrequest.html
     ErrorDocument 401 /static/401unauthorized.html
     ErrorDocument 403 /static/403forbidden.html
@@ -96,6 +113,32 @@ Protocols h2 h2c http/1.1
     ErrorDocument 502 /static/502badgateway.html
     ErrorDocument 503 /static/503serviceunavailable.html
     ErrorDocument 504 /static/504gatewaytimeout.html
+
+    <Location /static/400badrequest.html>
+      Require all granted
+    </Location>
+    <Location /static/401unauthorized.html>
+      Require all granted
+    </Location>
+    <Location /static/403forbidden.html>
+      Require all granted
+    </Location>
+    <Location /static/404notfound.html>
+      Require all granted
+    </Location>
+
+    <Location /static/500internalservererror.html>
+      Require all granted
+    </Location>
+    <Location /static/502badgateway.html>
+      Require all granted
+    </Location>
+    <Location /static/503serviceunavailable.html>
+      Require all granted
+    </Location>
+    <Location /static/504gatewaytimeout.html>
+      Require all granted
+    </Location>
 </Macro>
 
 <VirtualHost _default_:80>
@@ -117,25 +160,44 @@ Protocols h2 h2c http/1.1
       AuthUserFile conf/tiddlywiki.passwd
       Require valid-user
     </Location>
-    <Location /favicon.ico>
-      Require all granted
-    </Location>
-    <Location /static.css>
-      Require all granted
-    </Location>
+    Use ErrorDocuments
+    Use PublicDocuments
+<IfDefine !Private>
     <Location /static/>
       Require all granted
     </Location>
     <Location /s/>
       Require all granted
     </Location>
+</IfDefine>
   </VirtualHost>
 
   <VirtualHost _default_:443>
     Use Common
+<IfDefine Private>
+    <Location />
+      AuthType basic
+      AuthName "Private"
+      AuthBasicProvider file
+      AuthUserFile conf/tiddlywiki.passwd
+      Require valid-user
+    </Location>
+</IfDefine>
+<IfDefine !Private>
     <Location />
       Require all granted
     </Location>
+</IfDefine>
+    Use ErrorDocuments
+    Use PublicDocuments
+<IfDefine !Private>
+    <Location /static/>
+      Require all granted
+    </Location>
+    <Location /s/>
+      Require all granted
+    </Location>
+</IfDefine>
     RewriteCond %{REQUEST_METHOD} !^(GET|HEAD)
     RewriteRule .* - [R=405,L]
   </VirtualHost>
