Attempt to make auth work with latest tiddlywiki

--- a/apache/tiddlywiki.conf
+++ b/apache/tiddlywiki.conf
@@ -159,6 +159,10 @@ Protocols h2 h2c http/1.1
       AuthBasicProvider file
       AuthUserFile conf/tiddlywiki.passwd
       Require valid-user
+      RewriteEngine On
+      RewriteCond %{LA-U:REMOTE_USER} (.+)
+      RewriteRule . - [E=RU:%1]
+      RequestHeader set X-Remote-User "%{RU}e" env=RU
     </Location>
     Use ErrorDocuments
     Use PublicDocuments
@@ -181,6 +185,10 @@ Protocols h2 h2c http/1.1
       AuthBasicProvider file
       AuthUserFile conf/tiddlywiki.passwd
       Require valid-user
+      RewriteEngine On
+      RewriteCond %{LA-U:REMOTE_USER} (.+)
+      RewriteRule . - [E=RU:%1]
+      RequestHeader set X-Remote-User "%{RU}e" env=RU
     </Location>
 </IfDefine>
 <IfDefine !Private>
